# fast-video-object-detection

./: .gitignore  create_dataset.py  hello.py  infer_video.py  pyproject.toml
