[project]
name = "fast-video-object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pillow>=11.0.0",
    "pip>=25.0.1",
    "setuptools>=70.2.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchcodec>=0.2.0",
    "torchvision>=0.21.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchcodec = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
